# sol-autochess

./: LICENSE.md  README.md
autochess/: Anchor.toml  package-lock.json  package.json
autochess/programs/autochess/: Cargo.toml
autochess/programs/autochess/src/: lib.rs
autochess/programs/autochess/src/state/: accounts.rs  actions.rs  entities.rs  game.rs  mod.rs  projectiles.rs  units.rs  utils.rs
autochess/tests/: autochess.ts
client/: README.md  package-lock.json  package.json
client/pkg/: package.json  wasm_client.d.ts  wasm_client.js  wasm_client_bg.wasm  wasm_client_bg.wasm.d.ts
client/src/components/: AppBar.tsx  CancelGame.tsx  CreateGame.tsx  CreateGameButton.tsx  GameList.tsx  JoinGame.tsx  MainMenu.tsx  MenuButton.tsx  Modal.tsx  Notification.tsx  OpenGame.tsx  RequestAirdrop.tsx  SendTransaction.tsx  WalletProfileModule.tsx
client/src/game/: Board.ts  ContractController.ts  DraggableEntity.ts  Entity.ts  EntityManager.ts  Game.ts  GameController.ts  HealthBar.ts  HiddenEntity.ts  PiecePlacementManager.ts  Utils.ts  WasmController.ts
client/src/hooks/: useConnectionWrapper.tsx
client/src/idl/: autochess.json
client/src/models/: gameTypes.ts
client/src/pages/: _app.tsx  basics.tsx  index.tsx  rules.tsx  units.tsx
client/src/stores/: useBurnerWalletStore.tsx  useGameInputsStore.tsx  useGameListStore.tsx  (+1 more)
client/wasm-client/: Cargo.toml
react-app/: package-lock.json  package.json
react-app/src/: App.tsx  Home.tsx  Play.tsx  index.tsx
wasm-client/: Cargo.toml  LICENSE_MIT  package-lock.json  package.json
wasm-client/src/: lib.rs
(+24 files in other folders)
